@startuml
'https://plantuml.com/class-diagram




solution41 <|-- fileName
solution41 <|-- printOutput

class fileName {
List names
names.add()
}

class printOutput {
List names
FileWriter()
output.write()
output.close()
}

class solution41 {
List names
fileNames()
inputFile()
printOutput()
}


@enduml